syntax = "proto3";

option go_package = "github.com/fluffy-bunny/fluffycore-rage-identity/proto/oidc/flows;flows";
option java_multiple_files = true;
option java_package = "com.fluffybunny.rageoidc.flows";
option csharp_namespace = "FluffyBunny.RageOidc.Oidc.Flows";


package proto.oidc.flows;

import "google/protobuf/descriptor.proto";
import "proto/oidc/models/user.proto";

 
service AuthorizationRequestStateStore {
    // Create user
    rpc StoreAuthorizationRequestState (StoreAuthorizationRequestStateRequest) returns (StoreAuthorizationRequestStateResponse) {}     
    rpc GetAuthorizationRequestState (GetAuthorizationRequestStateRequest) returns (GetAuthorizationRequestStateResponse) {}     
    rpc DeleteAuthorizationRequestState (DeleteAuthorizationRequestStateRequest) returns (DeleteAuthorizationRequestStateResponse) {}     

}

message StoreAuthorizationRequestStateRequest{
    string state = 1;
    proto.oidc.models.AuthorizationRequestState authorization_request_state = 2;
}
message StoreAuthorizationRequestStateResponse{}

message GetAuthorizationRequestStateRequest{
    string state = 1;
}
message GetAuthorizationRequestStateResponse{
    proto.oidc.models.AuthorizationRequestState authorization_request_state = 1;
}
message DeleteAuthorizationRequestStateRequest{
    string state = 1;
}
message DeleteAuthorizationRequestStateResponse{}

 
 

 
 